# subtype_macro

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
